fixed sizing and spacing of images and chart

--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 #viewport {
   width: 100%;
   height: 100%;
+  text-align: center;
+  margin-top: 4%;
 }
 
 h1, p {
@@ -18,29 +20,29 @@ h1, p {
 #begin-button {
   text-align: center;
   width: 85px;
-  position: relative;
-  top: 15%;
-  left: 45%;
 }
 
 #left-viewport, #center-viewport, #right-viewport {
   display: inline;
-  width: 32%;
+  width: auto;
   height: auto;
 }
 
 #viewport img {
-  width: inherit;
+  width: 250px;
+  height: 250px;
   border: 1px solid black;
 }
 
-/*#results-viewport {
-
-}*/
+#results-viewport {
+  width: 100%;
+  text-align: center;
+}
 
 #study-results {
   width: 800px;
-  height: 600px;
-  position: relative;
-  left: 14%;
+  height: 400px;
+  margin: 5% 20%;
+
+
 }
